--- a/Sidebery5-GroupPage.css
+++ b/Sidebery5-GroupPage.css
@@ -1,5 +1,20 @@
 #root[data-color-scheme=dark]{
 	--frame-bg: #111}
 
-body[data-layout=grid] .tab[data-discarded=false] .bg{
-	opacity: .4}
+
+
+body[data-layout=grid] .tab[data-discarded=false]:not(:hover) .bg{
+	opacity: 1}
+
+body[data-layout="grid"] .tab:not(:hover) .info,
+body[data-layout="grid"] .tab:not(:hover) .ctrls .tab-btn{
+	opacity: 0}
+
+
+
+body[data-layout="list"] .tab{
+	height: 96px}
+
+body[data-layout="list"] .bg{
+	width: 171px;
+	height: 96px}
