--- a/Sidebery-Sidebar.css
+++ b/Sidebery-Sidebar.css
@@ -46,6 +46,7 @@
 	opacity:.65}
 
 .NavigationBar .nav-item .len{
+	text-shadow:none;
 	top:-2px;
 	right:0}
 
@@ -53,15 +54,24 @@
 
 
 	/*   TABS   */
+#root[data-pinned-tabs-position="panel"][data-pinned-tabs-list="true"] .PinnedTabsBar {
+	padding: 0 0 2px;
+	margin-top: -1px}
+
 .PinnedTabsBar::after {
-	bottom: 6px;
-	opacity: .12}
+	bottom: 0}
 
 #root.root[data-color-scheme=dark] .ScrollBox > .top-shadow{
 	box-shadow: 0  1px 12px 0 #000}
 
 #root.root[data-color-scheme=dark] .ScrollBox > .bottom-shadow{
 	box-shadow: 0 -1px 12px 0 #000}
+
+#root.root[data-color-scheme=light] .ScrollBox > .top-shadow{
+	box-shadow: 0  1px 12px 0 #0006}
+
+#root.root[data-color-scheme=light] .ScrollBox > .bottom-shadow{
+	box-shadow: 0 -1px 12px 0 #0006}
 
 
 
